--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Experiencia Laboral</h2>
-      <h3 class="seccion-descripcion">Estos son algunos de los puestos en lo que he laborado...</h3>
+      <h3 class="seccion-descripcion">Estos son algunos de los puestos en los que he laborado...</h3>
 
 
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
